Allow spacebar to scroll in Print Preview. b=158362 r=neil sr=bzbarsky a=benjamin